--- a/src/app/causal/causal.component.html
+++ b/src/app/causal/causal.component.html
@@ -2,6 +2,35 @@
 
 <div class="container-fluid">
     
+    <p-table #dt *ngIf="!displayPanel" [columns]="cols" [responsive]="true" [value]="causals"
+        selectionMode="single" [(selection)]="selected" sortMode="single" (onRowSelect)="onRowSelect($event)"
+        [paginator]="true" [rows]="15" [totalRecords]="totalRecords" [pageLinks]="5">
+
+        <ng-template pTemplate="caption">
+            <div style="text-align: left">        
+                <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
+                <input type="text" pInputText placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto; float: right;">
+                <i class="fa fa-search" style="margin:4px 4px 0 0; float: right;"></i>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header | translate}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row let-columns="columns">
+            <tr [pSelectableRow]="row">
+                <td *ngFor="let col of columns">
+                    {{row[col.field]}}
+                </td>
+            </tr>
+        </ng-template>
+
+    </p-table>
+
     <p-toolbar>
         <div class="ui-toolbar-group-left">
             <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
@@ -11,17 +40,6 @@
             <input #gb type="text" pInputText placeholder="{{ 'Search' | translate }}">
         </div>
     </p-toolbar>
-
-    <p-dataTable *ngIf="!displayPanel" [value]="causals" [responsive]="true"
-        selectionMode="single" [(selection)]="selected" (onRowSelect)="onRowSelect($event)"
-        [paginator]="true" [rows]="20" [totalRecords]="totalRecords" [pageLinks]="5"
-        [globalFilter]="gb" #dt>
-        <p-column field="causalId" header="Id" [sortable]="true"></p-column>
-        <p-column field="causalName" header="{{ 'Name' | translate }}" [sortable]="true"></p-column>
-        <p-column field="causalQuantity" header="{{ 'Stock' | translate }}" [sortable]="true"></p-column>
-        <p-column field="causalBooked" header="{{ 'Booked' | translate }}" [sortable]="true"></p-column>
-        <p-column field="causalIsPos" header="{{ 'Cash register' | translate }}" [sortable]="true"></p-column>
-    </p-dataTable>
 
     <p-panel *ngIf="displayPanel">
         <p-header>
