--- a/src/app/movement/movements.component.html
+++ b/src/app/movement/movements.component.html
@@ -13,7 +13,7 @@
         </div>
     </p-toolbar>
 
-    <p-dataTable *ngIf="!displayPanel" [responsive]="true" [value]="items | dateFilter:dateStartValue:dateFinishValue | priceFilter:amountValue:'movements'"
+    <p-table *ngIf="!displayPanel" [responsive]="true" [value]="items | dateFilter:dateStartValue:dateFinishValue | priceFilter:amountValue:'movements'"
         selectionMode="single" [(selection)]="selected" [contextMenu]="bts"
         [paginator]="true" [rows]="20" [totalRecords]="totalRecords" [pageLinks]="5" #dt>
         <p-column field="movementNumber" header="{{ 'Number' | translate }}" [sortable]="true" [filter]="true" filterPlaceholder="{{ 'Search' | translate }}"></p-column>
@@ -56,7 +56,7 @@
                 {{data.movementAmount | currencyFormat}}
             </ng-template>
         </p-column>
-    </p-dataTable>
+    </p-table>
     
     <p-contextMenu #bts [model]="buttons"></p-contextMenu>
 
