--- a/src/app/tag/tag.component.html
+++ b/src/app/tag/tag.component.html
@@ -2,23 +2,35 @@
 
 <div class="container-fluid">
 
-     <p-toolbar>
-        <div class="ui-toolbar-group-left">
-            <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
-            <button pButton type="button" title="{{ 'Edit' | translate }}" (click)="editClick()" class="ui-button-primary" icon="pi pi-pencil"></button>
-        </div>
-        <div class="ui-toolbar-group-right">
-            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-            <input #gb type="text" pInputText placeholder="{{ 'Search' | translate }}">
-        </div>
-    </p-toolbar>
+    <p-table #dt *ngIf="!displayPanel" [columns]="cols" [responsive]="true" [value]="tags"
+        selectionMode="single" [(selection)]="selected" sortMode="single" (onRowSelect)="onRowSelect($event)"
+        [paginator]="true" [rows]="15" [totalRecords]="totalRecords" [pageLinks]="5">
 
-    <p-dataTable *ngIf="!displayPanel" [responsive]="true" [value]="tags"
-        selectionMode="single" [(selection)]="selected" (onRowSelect)="onRowSelect($event)"
-        [globalFilter]="gb" #dt>
-        <p-column field="tagGroupId" header="Id" [style]="{'width':'10%'}" [sortable]="true"></p-column>
-        <p-column field="tagGroupName" header="{{ 'Name' | translate }}" [sortable]="true"></p-column>
-    </p-dataTable>
+        <ng-template pTemplate="caption">
+            <div style="text-align: left">        
+                <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
+                <button pButton type="button" title="{{ 'Edit' | translate }}" (click)="editClick()" class="ui-button-primary" icon="pi pi-pencil"></button>
+                <input type="text" pInputText placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto; float: right;">
+                <i class="fa fa-search" style="margin:4px 4px 0 0; float: right;"></i>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header | translate}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row let-columns="columns">
+            <tr [pSelectableRow]="row">
+                <td *ngFor="let col of columns">
+                    {{row[col.field]}}
+                </td>
+            </tr>
+        </ng-template>
+
+    </p-table>
 
     <p-panel *ngIf="displayPanel">
         <p-header>
@@ -59,19 +71,34 @@
 <br>
 <div class="container-fluid">
     
-    <p-toolbar>
-        <div class="ui-toolbar-group-left">
-            <button pButton type="button" label="{{totalValues}}" title="{{ 'Add' | translate }}" (click)="addValueClick()" class="ui-button-primary" icon="pi pi-plus"></button>
-        </div>
-    </p-toolbar>
+    <p-table #dt *ngIf="!displayPanelValue" [columns]="colsValue" [responsive]="true" [value]="values"
+        selectionMode="single" [(selection)]="selectedValue" sortMode="single" (onRowSelect)="onRowValueSelect($event)"
+        [paginator]="true" [rows]="15" [totalRecords]="totalRecords" [pageLinks]="5">
 
-    <p-dataTable *ngIf="!displayPanelValue" [responsive]="true" [value]="values"
-        selectionMode="single" [(selection)]="selectedValue" (onRowSelect)="onRowValueSelect($event)"
-        [globalFilter]="gb" #dt>
-        <p-column field="tagValueId" header="Id" [style]="{'width':'100px'}" [sortable]="true"></p-column>
-        <p-column field="tagValueCode" header="{{ 'Code' | translate }}" [sortable]="true"></p-column>
-        <p-column field="tagValueName" header="{{ 'Name' | translate }}" [sortable]="true"></p-column>
-    </p-dataTable>
+        <ng-template pTemplate="caption">
+            <div style="text-align: left">        
+                <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
+                <input type="text" pInputText placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto; float: right;">
+                <i class="fa fa-search" style="margin:4px 4px 0 0; float: right;"></i>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header | translate}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row let-columns="columns">
+            <tr [pSelectableRow]="row">
+                <td *ngFor="let col of columns">
+                    {{row[col.field]}}
+                </td>
+            </tr>
+        </ng-template>
+
+    </p-table>
 
     <p-panel *ngIf="displayPanelValue">
         <p-header>
